Remove the css styling of the select element that prevents the display of the dropdown arrow or picker. Now, the picker is visible in select element in length.html webpage.

--- a/style.css
+++ b/style.css
@@ -286,12 +286,6 @@ h1 {
   flex-wrap:wrap;
 }
 
-.display select, ::picker(select) {
-  -webkit-appearance:none;
-  -moz-appearance:none;
-  appearance:none;
-}
-
 .display select {
   width:100%;
   height:100%;
